--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,10 @@
-site_name: Anyvent Docs
-pages:
-        - Home: 'README.md'
+site_name: 'Anyvent Docs'
+site_description: 'Anyvent Docs'
+site_author: 'Ward Toulet'
+docs_dir: docs/
+repo_name: 'Anyvent/Anyvent.github.io'
+repo_url: 'https://github.com/anyvnet/anyvent.gitub.io'
+nav:
+    - Home: index.md
+theme:
+  name: 'material'
