--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,8 @@ site_name: 'Anyvent Docs'
 site_description: 'Anyvent Docs'
 site_author: 'Ward Toulet'
 docs_dir: docs/
-repo_name: 'Anyvent/Anyvent.github.io'
-repo_url: 'https://github.com/anyvnet/anyvent.gitub.io'
+repo_name: 'Anyvent/docs'
+repo_url: 'https://github.com/anyvnet/docs'
 nav:
     - Home: index.md
 theme:
