--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_description: 'Anyvent Docs'
 site_author: 'Ward Toulet'
 docs_dir: docs/
 repo_name: 'Anyvent/docs'
-repo_url: 'https://github.com/anyvnet/docs'
+repo_url: 'https://github.com/Anyvent/docs'
 nav:
     - Home: index.md
 theme:
